[tool.poetry]
name = "pandas-plotly"
version = "0.1.0"
description = "Tools to make working with Pandas, Plotly, and Dash easier."
authors = ["lucas.jamar <lucasjamar@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucasjamar/pandas-plotly"
exclude = ["examples/*"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
dash = "^2"

[tool.poetry.dev-dependencies]
pandas = "^1"
dash = "^2"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
