[tool.poetry]
name = "pandas-dash"
version = "0.1.1"
description = "Tools for working with Pandas, Plotly, and Dash."
authors = ["lucas.jamar <lucasjamar@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucasjamar/pandas-dash"
exclude = ["examples/*"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
dash = "^2"

[tool.poetry.dev-dependencies]
pandas = "^1"
dash = "^2"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
